--- a/home.html
+++ b/home.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Bouncer</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
+    <title>Daed Galaxy</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -12,7 +13,7 @@
       <button class="change-number">Change number</button>
       <button class="stop">Stop</button>
     </div>
-    <h1>Good luck</h1>
+    <h1>GGWP</h1>
     <p>Ball count:</p>
     <div class="container">
       <canvas></canvas>
