allow change asteroids

--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
     <div class="nav">
       <button class="start">Start game</button>
       <button class="change-number">Change number</button>
-      <button class="stop">Stop</button>
+      
     </div>
     <h1>GGWP</h1>
-    <p>Ball count:</p>
+    <p>Asteroids count:</p>
     <div class="container">
       <canvas></canvas>
     </div>
