--- a/home.html
+++ b/home.html
@@ -9,8 +9,7 @@
 
   <body>
     <div class="nav">
-      <button class="start">Start game</button>
-      <button class="change-number">Change number</button>
+      <button class="start">Start</button>
       
     </div>
     <h1>GGWP</h1>
