--- a/home.html
+++ b/home.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <div class="nav">
-      <button class="start">Start</button>
-      
-    </div>
+    
+    <button class="start">Start</button>
+    <button class="reset">Reset</button>
+   
     <h1>GGWP</h1>
     <p>Asteroids count:</p>
     <div class="container">
