--- a/home.html
+++ b/home.html
@@ -10,14 +10,33 @@
   <body>
     
     <button class="start">Start</button>
-    <button class="reset">Reset</button>
+    <button class="reset">Restart</button>
+    
+    <!-- <div class="speed">
+      <h3>Speed adjust</h3>
+      <form>
+        <div class="value-button" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
+        <input type="number" min=1 id="number" value="3" />
+        <div class="value-button" id="increase" onclick="increaseValue()" value="Increase Value">+</div>
+      </form>
+    </div> -->
+
    
     <h1>GGWP</h1>
-    <p>Asteroids count:</p>
+    <p>Asteroids:</p>
+    <div class="hitpoint">
+      <label for="hp" class="hpvalue">HP: 100% </label>
+      <meter id="hp" max="100" value="100"></meter>
+    </div>
     <div class="container">
       <canvas></canvas>
+    </div>
+    <div class="timer">
+      <img src="img/clock.png" alt="timerclock">
+      <p id="timer-digit"><span id="seconds">00</span>: <span id="tens">00</span></p>
     </div>
 
     <script src="main.js"></script>
   </body>
 </html>
+
