--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <h1>GGWP</h1>
     <p>Asteroids:</p>
     <div class="hitpoint">
-      <label for="hp" class="hpvalue">HP: 100% </label>
+      <label for="hp" class="hpvalue">HP: 100</label>
       <meter id="hp" max="100" value="100"></meter>
     </div>
     <div class="container">
